--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -108,13 +108,6 @@ body {
     flex: 0 0 0.2%;
 }
 
-.header-cell:not(:last-child) {
-}
-
-.header-cell:last-child {
-    /* dick */
-}
-
 .header-cell__count {
     font-size: 40px;
     line-height: 48px;
@@ -937,7 +930,6 @@ body {
 
 .item-task__priority {
     border-radius: 0px 0px 4px 5px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: absolute;
     top: -1px;
     right: 9%;
@@ -1611,4 +1603,149 @@ body {
     border: 1px solid #222078;
     color: #ffffff;
     background-color: #222078;
+}
+
+/* Pop up for the first login to the site */
+
+.pop-up-first-enter {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 2;
+    opacity: 0;
+    overflow: hidden;
+    display: none;
+}
+.pop-up-first-enter.active {
+    opacity: 1;
+    display: block;
+    /* overflow: scroll; */
+}
+.pop-up-first-enter__container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px;
+}
+.pop-up-first-enter__body {
+    margin: auto;
+    max-width: 804px;
+    background-color: #fff;
+    border-radius: 15px;
+    display: none;
+}
+
+.pop-up-first-enter__body.active {
+    display: block;
+}
+
+.pop-up-first-enter__img {
+}
+.pop-up-first-enter__img img {
+    min-width: 100%;
+}
+.pop-up-first-enter__content {
+    padding: 20px 100px 60px 100px;
+    display: flex;
+    flex-direction: column;
+}
+.pop-up-first-enter__title {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 38px;
+    color: #222078;
+    margin-bottom: 20px;
+}
+.pop-up-first-enter__description {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    color: #222078;
+    margin-bottom: 40px;
+}
+.pop-up-first-enter__block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+}
+.pop-up-first-enter__input-name {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    padding: 10px 15px;
+    border: 1px solid #8b8da1;
+    border-radius: 6px;
+}
+.pop-up-first-enter__input-name::placeholder {
+    color: #8b8da1;
+}
+.pop-up-first-enter__btn {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+    color: #f4f4f4;
+    padding: 10px 30px;
+    background: #222078;
+    border-radius: 10px;
+}
+.pop-up-first-enter__slider {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+}
+
+.pop-up-first-enter__slider span {
+    display: block;
+    width: 6px;
+    height: 6px;
+    background: #222078;
+    border-radius: 50%;
+}
+.pop-up-first-enter__slider span.active {
+    display: block;
+    width: 20px;
+    height: 6px;
+    background: #222078;
+    border-radius: 5px;
+}
+
+@media (max-width: 768px) {
+    .pop-up-first-enter__content {
+        padding: 20px 60px;
+    }
+}
+
+@media (max-width: 530px) {
+    .pop-up-first-enter__content {
+        padding: 20px;
+    }
+    .pop-up-first-enter__title {
+        font-size: 20px;
+        line-height: 24px;
+    }
+    .pop-up-first-enter__description {
+        font-size: 16px;
+        line-height: 19px;
+    }
+    .pop-up-first-enter__input-name {
+        font-size: 14px;
+        line-height: 17px;
+    }
+    .pop-up-first-enter__btn {
+        font-size: 14px;
+        line-height: 17px;
+    }
+    .pop-up-first-enter__block {
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+    }
+    .pop-up-first-enter__input-name {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
