--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -680,7 +680,67 @@ body {
     display: none;
     font-size: 20px;
     line-height: 24px;
+    color: #c9c9c9;
+    position: relative;
 }
+
+.toolbar_filter_list {
+    display: none;
+}
+
+.toolbar_filter_list.active {
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    z-index: 200;
+    background-color: #303030;
+    border: 1px solid #6c6c6c;
+    border-radius: 10px;
+    padding: 15px;
+    width: 170px;
+}
+
+.toolbar_filter_item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+@media (max-width: 425px) {
+    .toolbar_filter_list.active {
+        left: -90px;
+    }
+}
+
+/* custom radion btn */
+
+.toolbar_filter__radio-btn {
+    opacity: 0;
+    position: absolute;
+    width: 18px;
+    height: 18px;
+}
+
+.toolbar_filter__radio-btn-label:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+}
+
+.toolbar_filter__radio-btn + .toolbar_filter__radio-btn-label:before {
+    background: #ffffff;
+    border: 1px solid #c9c9c9;
+    border-radius: 3px;
+}
+
+.toolbar_filter__radio-btn:checked + .toolbar_filter__radio-btn-label:before {
+    background: #6c6c6c;
+    box-shadow: inset 0px 0px 0px 2px #fff;
+}
+
+/* custom radio btn end */
 
 .toolbar__right {
     display: flex;
@@ -989,9 +1049,9 @@ body {
 .item-settings {
     display: none;
     position: absolute;
+    z-index: 200;
     top: 70%;
     right: 50%;
-    z-index: 102;
     background-color: #303030;
     border: 1px solid #6c6c6c;
     border-radius: 10px;
@@ -1288,6 +1348,15 @@ body {
     border: 1px solid #c9c9c9;
     border-radius: 6px;
     width: 100%;
+}
+
+.settings__select-gender {
+    margin-top: 20px;
+}
+.settings__select-gender-list {
+    display: flex;
+    gap: 20px;
+    color: #c9c9c9;
 }
 
 .settings__theme {
