--- a/css/light-mode.css
+++ b/css/light-mode.css
@@ -679,7 +679,67 @@ body {
     font-size: 20px;
     line-height: 24px;
     color: #303030;
+    position: relative;
 }
+
+.toolbar_filter_list {
+    display: none;
+}
+
+.toolbar_filter_list.active {
+    display: block;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    z-index: 200;
+    background: #ffffff;
+    border: 1px solid #8b8da1;
+    border-radius: 10px;
+    padding: 15px;
+    color: #8b8da1;
+    width: 170px;
+}
+
+.toolbar_filter_item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+@media (max-width: 425px) {
+    .toolbar_filter_list.active {
+        left: -90px;
+    }
+}
+
+/* custom radion btn */
+
+.toolbar_filter__radio-btn {
+    opacity: 0;
+    position: absolute;
+    width: 18px;
+    height: 18px;
+}
+
+.toolbar_filter__radio-btn-label:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 18px;
+    height: 18px;
+    margin-right: 5px;
+}
+
+.toolbar_filter__radio-btn + .toolbar_filter__radio-btn-label:before {
+    background: #ffffff;
+    border: 1px solid #c9c9c9;
+    border-radius: 3px;
+}
+
+.toolbar_filter__radio-btn:checked + .toolbar_filter__radio-btn-label:before {
+    background: #222078;
+    box-shadow: inset 0px 0px 0px 2px #fff;
+}
+
+/* custom radio btn end */
 
 .toolbar__right {
     display: flex;
@@ -998,6 +1058,7 @@ body {
     border-radius: 10px;
     padding: 10px;
     min-width: 220px;
+    z-index: 200;
 }
 
 .item-settings.active {
@@ -1278,7 +1339,7 @@ body {
     font-size: 18px;
     line-height: 22px;
     color: #8b8da1;
-    padding-bottom: 10px;
+    padding: 10px 0px;
 }
 .settings__input {
     font-weight: 400;
@@ -1289,6 +1350,14 @@ body {
     border: 1px solid #8b8da1;
     border-radius: 6px;
     width: 100%;
+}
+
+.settings__select-gender {
+    margin-top: 20px;
+}
+.settings__select-gender-list {
+    display: flex;
+    gap: 20px;
 }
 
 .settings__theme {
