--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -526,6 +526,10 @@ body {
     display: flex;
 }
 
+.add-contaienr__datepicker {
+    width: 50px;
+}
+
 @media (max-width: 530px) {
     .add-container__hidden-state {
         padding: 15px 20px;
@@ -934,6 +938,7 @@ body {
 .item-task__tags {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 .tag {
@@ -947,9 +952,9 @@ body {
     line-height: 19px;
     color: #c9c9c9;
     padding: 10px 20px;
+    margin-right: 10px;
     border: 1px solid #c9c9c9;
     border-radius: 8px;
-    margin-right: 40px;
     gap: 5px;
 }
 
@@ -1171,9 +1176,6 @@ body {
     .item-task__tags {
         flex-wrap: wrap;
         left: 0px;
-    }
-    .tag__time {
-        margin-bottom: 10px;
     }
 }
 
